[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/video/tutorial_frame.tres" type="SpriteFrames" id=1]
[ext_resource path="res://scripts/Tutorial.gd" type="Script" id=2]
[ext_resource path="res://assets/font/Gumball.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/fx/bep.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/fx/wukwukwuk.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/fx/agua.ogg" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
size = 67
font_data = ExtResource( 3 )

[node name="Tutorial" type="Node"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 1 )
frame = 29
playing = true
centered = false

[node name="Start" type="Label" parent="."]
margin_left = 805.0
margin_top = 510.0
margin_right = 1001.0
margin_bottom = 576.0
mouse_filter = 0
custom_fonts/font = SubResource( 1 )
text = "start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bep" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -19.314
pitch_scale = 1.67

[node name="PositionDown" type="Position2D" parent="."]
position = Vector2( 513.015, 537 )
__meta__ = {
"_gizmo_extents_": 31.4
}

[node name="PositionUp" type="Position2D" parent="."]
position = Vector2( 513, 510 )

[node name="wukwukwuk" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -27.966
autoplay = true

[node name="aqua" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -23.683
pitch_scale = 0.67
autoplay = true

[connection signal="gui_input" from="Start" to="." method="_on_Start_gui_input"]
[connection signal="mouse_entered" from="Start" to="." method="_on_Start_mouse_entered"]
[connection signal="mouse_exited" from="Start" to="." method="_on_Start_mouse_exited"]
